# robotics-first-project

./: .gitignore  CMakeLists.txt  README.md  package.xml  prova  start.sh  whereweare.txt
catkin_ws/src/first_project/: CMakeLists.txt  info.txt  package.xml
catkin_ws/src/first_project/launch/: .launch.launch.swp  launch.launch
catkin_ws/src/first_project/rviz/: gps_viz.rviz
catkin_ws/src/first_project/src/: gps_odometer.cpp  odometer.cpp  sector_times.cpp
docker/: Dockerfile  build.sh
launch/: launch.launch
