<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.0</version>
  <description>The first_project package</description>

  <maintainer email="arcangeli.lorenzo@polimi.it">simone</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

