<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.0</version>
  <description>First robotics package</description>

  <maintainer email="arcangeli.lorenzo@polimi.it">Lorenzo, Angela, Leonardo</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
